--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   },
   "homepage": "https://github.com/dbhinton/hunts-photo-app#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.44.0",
+    "aws-sdk": "^2.1046.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.1.0"
+    "mongoose": "^6.1.0",
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "concurrently": "^6.4.0",
