--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.0",
     "multer": "^1.4.4",
     "uuid": "^8.3.2",
