--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.0",
     "multer": "^1.4.4",
+    "path": "^0.12.7",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.12"
   },
