--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "mongoose": "^6.1.0",
     "multer": "^1.4.4",
     "path": "^0.12.7",
+    "underscore": "^1.13.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "concurrently": "^6.4.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15"
-  }
+  },
+  "keywords": []
 }
