--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "dataImport": "node backend/seeder",
-    "dataDestroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG-PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "dataDestroy": "node backend/seeder -d"
   },
   "repository": {
     "type": "git",
