--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "dataImport": "node backend/seeder",
-    "dataDestroy": "node backend/seeder -d"
+    "dataDestroy": "node backend/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix"
   },
   "repository": {
     "type": "git",
