--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node backend/server",
+    "start": "node backend/server --openssl-legacy-provider start",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -45,5 +45,8 @@
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15"
   },
+    "engines": {
+      "node": "16.13.0"
+    },
   "keywords": []
 }
